--- a/fereastra.html
+++ b/fereastra.html
@@ -52,7 +52,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<a class="" href="https://www.fereastraperfecta.ro/despre-saint-gobain">Despre Saint-Gobain</a>
 					<a class="" href="https://www.fereastraperfecta.ro/harta-parteneri">Harta Parteneri</a>
 					<a class="" href="https://www.fereastraperfecta.ro/fii-campionul-confortului">Fii campionul confortului</a>
-					<a target="_blank" class="" href="http://peff.edw.ro/login/?next=/">Login</a>
+					<a target="_blank" class="" href="http://sgg-test.edw.ro/login/?next=/">Login</a>
 					<a class="" href="https://www.fereastraperfecta.ro/contact">Contact</a>
 					<a target="_blank" href="https://www.facebook.com/SaintGobainBuildingGlassRomania"><i class="fab fa-facebook-f" style="color:#219cdc; font-size: 18px;"></i></a>
 			<a target="_blank" href="https://www.youtube.com/user/SaintGobainRomania"><i class="fab fa-youtube" style="color:#219cdc; font-size: 18px;"></i></a>
@@ -85,7 +85,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </div>
 
 <div class="slider" id="slider" style="height: 100vh; top:100px">
-	<iframe src="https://peff.edw.ro" frameborder="0" allowfullscreen style="width:100%;height:100%;"></iframe> 
+	<iframe src="https://sgg-test.edw.ro" frameborder="0" allowfullscreen style="width:100%;height:100%;"></iframe> 
 </div>
 
 
